--- a/101-200.md
+++ b/101-200.md
@@ -4,3 +4,11 @@
 记录每一个应该打印多少次
 
 也可以用前序遍历，每次记录深度，将值放入对应的数组
+# 103. Binary Tree Zigzag Level Order Traversal
+思路与[102](#102-binary-tree-level-order-traversal)差不多
+>设置一个标志位，根据标志位考虑怎样插入
+# 104. Maximum Depth of Binary Tree
+根据函数的语义递归求解
+也可以使用`bfs`跟`dfs`
+# 105. Construct Binary Tree from Preorder and Inorder Traversal
+利用先序遍历结果找到根节点,然后将两个遍历结果划分成左右子树的问题递归即可
