--- a/101-200.md
+++ b/101-200.md
@@ -11,4 +11,9 @@
 根据函数的语义递归求解
 也可以使用`bfs`跟`dfs`
 # 105. Construct Binary Tree from Preorder and Inorder Traversal
-利用先序遍历结果找到根节点,然后将两个遍历结果划分成左右子树的问题递归即可
+利用先序遍历结果找到根节点，然后将遍历中序找到索引，根据索引划分成左右子树的问题递归即可
+# 106. Construct Binary Tree from Inorder and Postorder Traversal
+利用后序遍历结果找到根节点，然后将遍历中序找到索引，根据索引划分成左右子树的问题递归即可
+# 107. Binary Tree Level Order Traversal II
+思路与[102](#102-binary-tree-level-order-traversal)差不多
+> 最后放的时候放入最开始的位置即可
