--- a/101-200.md
+++ b/101-200.md
@@ -49,3 +49,12 @@ Math.max(depth(root.left),depth(root.right)) + 1;
 记录遍历到每个节点的深度，到叶子节点便与`min`比较
 # 112. Path Sum
 遍历每个值，注意叶子节点的条件是当前`sum`与该节点的值是否相等
+# 113. Path Sum II
+遍历所有路径，找到相同的即加入结果集，注意加入某个叶子后，要把该点再删除
+# 114. Flatten Binary Tree to Linked List
+递归，考虑左边已经flateen，插入root右边，并将左边至为空，再插入右边
+# 115. Distinct Subsequences
+递归超时，考虑动态规划（可以压缩空间、优化）
+* 某个位置若相等，则为要或者不要的和
+* 某个位置若不相等，则只能不要
+
