--- a/101-200.md
+++ b/101-200.md
@@ -57,4 +57,25 @@ Math.max(depth(root.left),depth(root.right)) + 1;
 递归超时，考虑动态规划（可以压缩空间、优化）
 * 某个位置若相等，则为要或者不要的和
 * 某个位置若不相等，则只能不要
-
+# 116. Populating Next Right Pointers in Each Node
+层次遍历，当每层最后一个元素设置的`next`为`null`
+# 117. Populating Next Right Pointers in Each Node
+跟[116](#116-populating-next-right-pointers-in-each-node)一样
+# 118. Pascal's Triangle
+递归求解
+# 119. Pascal's Triangle II
+第`i+1`项是第`i`项的倍数`(n-i)/(i+1)`
+``` java
+cur = cur * (rowIndex-i)/(i+1);
+```
+或者减少空间从后往前累加
+``` java
+for (int i = 0; i <= rowIndex; i++) {
+    for (int j = i; j >= 0; j--) {
+        if (j == 0 || j == i)
+            num[j] = 1;
+        else
+            num[j] = num[j] + num[j - 1];
+    }
+}
+```
