--- a/101-200.md
+++ b/101-200.md
@@ -68,7 +68,7 @@ Math.max(depth(root.left),depth(root.right)) + 1;
 ``` java
 cur = cur * (rowIndex-i)/(i+1);
 ```
-或者减少空间从后往前累加
+或者减少空间只用一个数组，从后往前累加
 ``` java
 for (int i = 0; i <= rowIndex; i++) {
     for (int j = i; j >= 0; j--) {
@@ -79,3 +79,17 @@ for (int i = 0; i <= rowIndex; i++) {
     }
 }
 ```
+# 120. Triangle
+可以考虑从倒数第二行开始向上`dp`，最后的就是结果
+# 121. Best Time to Buy and Sell Stock
+只能买卖一次，记录三个状态，未持有，买入，卖出
+
+注意初始化
+``` java
+result[0][1] = -prices[0]
+```
+另外由于只买卖一次，可以记录当前位置之前买入最小值，然后当前卖出，保存最好的结果
+# 122. Best Time to Buy and Sell Stock II
+可以买卖无数次，所以有两个状态，持有和未持有
+
+另外可以贪心，只要今天价格小于明天价格就在今天买入然后明天卖出
