--- a/101-200.md
+++ b/101-200.md
@@ -93,3 +93,11 @@ result[0][1] = -prices[0]
 可以买卖无数次，所以有两个状态，持有和未持有
 
 另外可以贪心，只要今天价格小于明天价格就在今天买入然后明天卖出
+# 123. Best Time to Buy and Sell Stock III
+注意初始化，并且最后可能只买入一次
+# 124. Binary Tree Maximum Path Sum
+返回时只能返回某一侧的路径，若一侧为负，则让其为`0`表示不要一侧
+# 125. Valid Palindrome
+双指针，注意判断数字和字符的方法
+
+也可以把数字字符选出来然后逆转比较是否`equals`
