--- a/101-200.md
+++ b/101-200.md
@@ -101,3 +101,9 @@ result[0][1] = -prices[0]
 双指针，注意判断数字和字符的方法
 
 也可以把数字字符选出来然后逆转比较是否`equals`
+# 126. Word Ladder II
+按层次遍历，每一层遍历的时候记录父节点
+
+注意要一层遍历完后才能更新`visit`和加入`queue`
+# 127. Word Ladder
+可以使用双向广度优先搜索优化，每次从较少元素的那端搜，提升性能
