--- a/101-200.md
+++ b/101-200.md
@@ -107,3 +107,22 @@ result[0][1] = -prices[0]
 注意要一层遍历完后才能更新`visit`和加入`queue`
 # 127. Word Ladder
 可以使用双向广度优先搜索优化，每次从较少元素的那端搜，提升性能
+# 128. Longest Consecutive Sequence
+所有元素加到`set`中，对每个元素求一个上下界，求的过程中就删掉在一个序列中的元素
+
+或者对每一个不存在比他还小`1`的数就长度，比如`4,3`都在集合里，遍历到4的时候发现`4-1=3`已经在了，就跳过，到`3`的时候再求
+# 129. Sum Root to Leaf Numbers
+先序遍历记录每个路径的值，每遍历一层就乘以`10`
+# 130. Surrounded Regions
+遍历每个`O`点，找到连通区域，标记为一个值，并记录是否需要覆盖（存在边界的`O`点）
+
+更好的方法是对边界的`O`点找到连通区域，标记为不会改变，其余的都比较为改变
+# 131. Palindrome Partitioning
+递归，若前面的子串是回文，加入`result`，继续后面的
+# Palindrome Partitioning II
+用记忆化的递归仍然搜索次数超时
+
+考虑从某个点出发能左右延申的最大距离，分奇偶讨论，右边的点等于左边的点`+1`
+
+考虑对某个位置到某个位置如果是回文，则此点等于左边的点`+1`
+
