--- a/101-200.md
+++ b/101-200.md
@@ -119,10 +119,13 @@ result[0][1] = -prices[0]
 更好的方法是对边界的`O`点找到连通区域，标记为不会改变，其余的都比较为改变
 # 131. Palindrome Partitioning
 递归，若前面的子串是回文，加入`result`，继续后面的
-# Palindrome Partitioning II
-用记忆化的递归仍然搜索次数超时
+# 132 Palindrome Partitioning II
+1.用记忆化的递归仍然搜索次数超时
 
-考虑从某个点出发能左右延申的最大距离，分奇偶讨论，右边的点等于左边的点`+1`
+2.考虑从某个点出发能左右延申的最大距离，分奇偶讨论，右边的点等于左边的点`+1`
 
-考虑对某个位置到某个位置如果是回文，则此点等于左边的点`+1`
+3.考虑对某个位置到某个位置如果是回文，则此点等于左边的点`+1`，
 
+> 某两个位置是否是回问可以先求出来，可以用延申的方法求会快一点，这种情况加上`3`的处理思路和`2`是差不多的
+# 133. Clone Graph
+用`map`记录是否已经创建过，注意`put`的时候要`put`新元素
