--- a/101-200.md
+++ b/101-200.md
@@ -129,3 +129,47 @@ result[0][1] = -prices[0]
 > 某两个位置是否是回问可以先求出来，可以用延申的方法求会快一点，这种情况加上`3`的处理思路和`2`是差不多的
 # 133. Clone Graph
 用`map`记录是否已经创建过，注意`put`的时候要`put`新元素
+# 134. Gas Station
+从第一个`gas[i]`大于`cost[i]`的点出发，若从`i`到`j`，差的累积为负，说明`i`不是出发的点，此时直接从`j+1`开始（`i->j`中的所有点都不行）
+
+若最终`gas`大于`cost`说明能走完，若小于说明没有这种点
+# 135. Candy
+先给第一个人`1`个糖
+* 后面的人如果大于前一个人就`+1`，
+* 若小于
+  * 就取`1`（当前一个人很大）
+  * 或取0（前一人为`1`），此时候重新赋值为`1`，再更新之前的值，若等于后面的了就`+1`
+
+还可以正反两面考虑，先有前往后
+
+两个数组
+``` java
+for (int i = 1; i < ratings.length; i++) {
+    if (ratings[i] > ratings[i - 1]) {
+        left2right[i] = left2right[i - 1] + 1;
+    }
+}
+for (int i = ratings.length - 2; i >= 0; i--) {
+    if (ratings[i] > ratings[i + 1]) {
+        right2left[i] = right2left[i + 1] + 1;
+    }
+}
+for (int i = 0; i < ratings.length; i++) {
+    sum += Math.max(left2right[i], right2left[i]);
+}
+```
+一个数组
+``` java
+for (int i = 1; i < ratings.length; i++) {
+    if (ratings[i] > ratings[i - 1]) {
+        candies[i] = candies[i - 1] + 1;
+    }
+}
+int sum = candies[ratings.length - 1];
+for (int i = ratings.length - 2; i >= 0; i--) {
+    if (ratings[i] > ratings[i + 1]) {
+        candies[i] = Math.max(candies[i], candies[i + 1] + 1);
+    }
+    sum += candies[i];
+}
+```
