--- a/101-200.md
+++ b/101-200.md
@@ -140,7 +140,7 @@ result[0][1] = -prices[0]
   * 就取`1`（当前一个人很大）
   * 或取0（前一人为`1`），此时候重新赋值为`1`，再更新之前的值，若等于后面的了就`+1`
 
-还可以正反两面考虑，先有前往后
+还可以正``反两面考虑，先有前往后
 
 两个数组
 ``` java
@@ -172,4 +172,49 @@ for (int i = ratings.length - 2; i >= 0; i--) {
     }
     sum += candies[i];
 }
+```
+# 136. Single Number
+用以个`set`（或者`map`）尝试删除，不能删成功就加入，最后剩的就是出现一次的值
+
+或者考虑`2∗(a+b+c)−(a+a+b+b+c)=c` 
+``` python
+2 * sum(set(nums)) - sum(nums)`
+```
+或者异或
+# 137. Single Number II
+遍历元素，用`32`个位置记录每个位置出现`1`的次数，统计时候看与`k`的关系
+
+考虑`1,1,1`三个数进来
+|one|two|three|
+|:-:|:-:|:-:|
+|0|0|0|
+|1|0|0|
+|0|1|0|
+|1->0|1->0|1->0|
+``` java
+for (int num : nums) {
+    // two的相应的位等于1，表示该位出现2次
+    two |= (one & num);
+    // one的相应的位等于1，表示该位出现1次
+    one ^= num;
+    // three的相应的位等于1，表示该位出现3次
+    three = (one & two);
+    // 如果相应的位出现3次，则该位重置为0
+    two &= ~three;
+    one &= ~three;
+}
+```
+|a|b|
+|:-:|:-:|
+|0|0|
+|0|1|
+|1|0|
+|0|0|
+一个转换使得三次变为原来的数字
+1. 00 (^) 1 = 01
+2. 01 (^) 1 = 10
+3. 10 (^) 1 = 00 ( mod 3)
+``` java
+b = (b ^ x) & ~a;
+a = (a ^ x) & ~b;
 ```
