--- a/101-200.md
+++ b/101-200.md
@@ -140,7 +140,7 @@ result[0][1] = -prices[0]
   * 就取`1`（当前一个人很大）
   * 或取0（前一人为`1`），此时候重新赋值为`1`，再更新之前的值，若等于后面的了就`+1`
 
-还可以正``反两面考虑，先有前往后
+还可以正反两面考虑，先有前往后
 
 两个数组
 ``` java
