--- a/101-200.md
+++ b/101-200.md
@@ -221,3 +221,59 @@ for (int num : nums) {
 b = (b ^ x) & ~a;
 a = (a ^ x) & ~b;
 ```
+# 138. Copy List with Random Pointer
+先遍历`next`，把新建的放到`map`中，再遍历`random`
+# 139. Word Break
+记忆化的递归记录该点是否能分割，若不能就直接返回
+
+也可以`dp`，跟完全背包很像
+``` java
+for (int i = 1; i <= n; i++) {
+    for (int j = 0; j < i; j++) {
+        if (dp[j] && wordDict.contains(s.substring(j, i))) {
+            dp[i] = true;
+            break;
+        }
+    }
+}
+```
+# 140. Word Break II
+用带记忆的递归，注意递归即使成功了也要继续，用`found`记忆该位置是否成功
+
+为了不超时，可以先用[139](#139-word-break)求出是否有解，有解才继续，这样可以防止直接遍历最终无解超时
+# 141. Linked List Cycle
+使用快慢指针，若相遇则表示有环
+
+或者使用`hash`表将每个点存起来，若再次遇到表示有环
+
+或者把链表的值变为一个特定值（之前不存在链表中），若下次遇到整个值表示有环
+# 142. Linked List Cycle II
+或者使用`hash`表将每个点存起来，若再次遇到表示有环，且返回即可
+
+或者快慢指针，画图找出距离的关系，发现让另外一个指针从头开始走，慢指针从相遇的地方开始走，这两个相遇的时候即是环的位置
+
+另外考虑，链表同时申请地址可能是按低到高排序，即后一个节点地址大于前一个，所以当遇到后一个地址小于前一个说明有环，返回即可
+# 143. Reorder List
+1. 快慢指针找到中点
+2. 反转后面的指针
+3. 合并
+
+可以考虑双端队列先记录所有的点，再拿出来
+# 144. Binary Tree Preorder Traversal
+先序遍历直接用个栈放右跟左即可，注意顺序
+也可以参照[94](https://github.com/humwawe/leetcode/blob/master/1-100.md#94-binary-tree-inorder-traversal)模拟递归过程
+# 145. Binary Tree Postorder Traversal
+后序比较复杂，可以按照先序的思路最后逆转一下数组，但是要注意先压左再压右
+
+或者模拟后续递归
+>模板
+``` java
+while (!stack.isEmpty() || cur != null) {
+    if (cur != null) {
+
+    } else {
+
+    }
+}
+
+```
