--- a/101-200.md
+++ b/101-200.md
@@ -275,5 +275,21 @@ while (!stack.isEmpty() || cur != null) {
 
     }
 }
-
 ```
+# 146. LRU Cache
+使用`LinkedHashMap`来维护记录
+* 每次`get`就删除后往前面放，
+* `put`先删除再放，如果容量超了，把第一个删除
+
+也可以手动实现一个双向链表加`hash`表，需要对双向链表进行移动
+# 147. Insertion Sort List
+递归先假设后面的排好了，考虑第一个元素应该插入哪个位置，相当于是从后往前的插入排序
+# 148. Sort List
+归并排序，快慢指针找中点，然后断开
+# 149. Max Points on a Line
+穷举。注意两个点
+* 重复点
+* 怎么判断是否在一条直线上
+>使用`long`和乘法
+# 150. Evaluate Reverse Polish Notation
+可以先判断是否是运算符，不是就`parse`进栈
