--- a/101-200.md
+++ b/101-200.md
@@ -293,3 +293,52 @@ while (!stack.isEmpty() || cur != null) {
 >使用`long`和乘法
 # 150. Evaluate Reverse Polish Notation
 可以先判断是否是运算符，不是就`parse`进栈
+# 151. Reverse Words in a String
+用了库函数直接分割反转在拼接
+
+一般反转可以先反转然后再考虑整体反转
+# 152. Maximum Product Subarray
+动态规划，记录使用当前位置的数的最大值和最小值
+
+注意当该值小于零的时候，更新`min`用到了`max`，而`max`已经改变，所以需要保存之前的`max`
+``` java
+tmp = tmpMax;
+tmpMax = Math.max(num * tmpMin, num);
+tmpMin = Math.min(num * tmp, num);
+```
+另外的一个思路
+> 当一个数组中没有0存在，则分为两种情况： 
+> 1. 负数为偶数个，则整个数组的各个值相乘为最大值
+> 2. 负数为奇数个，则从左边开始，乘到最后一个负数停止有一个“最大值”，从右边也有一个“最大值”
+
+实现上直接从左到右的相乘的最大值，再计算从右到左的最大值，遇到`0`则置为`1`
+``` java
+for (int num : nums) {
+    a = a * num;
+    if (max < a) max = a;
+    if (num == 0) a = 1;
+}
+```
+>有一部分的题从左往右算一遍，再逆过来算一遍是不错的思路
+# 153. Find Minimum in Rotated Sorted Array
+二分，注意`left`和`right`的更新，如果`mid>right`，则`left`可以更新到`mid+1`，否则`right`更新到`mid`，不能是`mid-1`，因为`mid`此时可能是最小值
+# 154. Find Minimum in Rotated Sorted Array II
+跟[153](#153-find-minimum-in-rotated-sorted-array)类似，只是多了重复元素，这样需要考虑跟右边相等的情况下如何移动
+
+比如`[3,3,3,1,3]`,`[3,1,3,3,3]`，在这种情况下，无法判断该移动左边还是右边，因此直接将`right--`，注意不能`left++`
+> 或者整体使用递归，当相等的时候分别访问两边求最小值
+
+另外其实在这种旋转数组中，只有两边的元素重复会带来疑惑，因此每次进循环可以先去掉两边
+# 155. Min Stack
+两个栈，一个放元素，一个放当前的最小值，`minStack`有点单调栈的感觉
+# 160. Intersection of Two Linked Lists
+两个`tmp`先一起走，某个走到最后，另一个`tmp`再和一个从头节点走的节点`cur`一起走，当这个`tmp`走到空，则`cur`即走了多出来的节点，此时再一起走，相等即是交点
+
+算法也可以这样
+``` java
+while(pA != pB) {
+    pA = pA == null ? headB : pA.next;
+    pB = pB == null ? headA : pB.next;
+}
+```
+某个走到末尾了，则指向另一个的头节点，等另一个走到末尾了，整个头节点就走了多出来的距离，两个再继续走
