--- a/101-200.md
+++ b/101-200.md
@@ -342,3 +342,10 @@ while(pA != pB) {
 }
 ```
 某个走到末尾了，则指向另一个的头节点，等另一个走到末尾了，整个头节点就走了多出来的距离，两个再继续走
+# 162. Find Peak Element
+二分，考虑中间点与后面一个点的大小关系
+# 164. Maximum Gap
+用`bitset`保存每个出现的数字，再取出来比较间隔，不知道为啥速度慢，
+
+可以使用桶排序，记录每个桶的最小值和最大值，比较相邻两个有数的桶里的差距（前一个最大值和后一个最小值）
+> 桶的设计为`N+1`个桶，保证一定存在空桶，这样最大间距肯定不在同一个桶内
