--- a/101-200.md
+++ b/101-200.md
@@ -349,3 +349,21 @@ while(pA != pB) {
 
 可以使用桶排序，记录每个桶的最小值和最大值，比较相邻两个有数的桶里的差距（前一个最大值和后一个最小值）
 > 桶的设计为`N+1`个桶，保证一定存在空桶，这样最大间距肯定不在同一个桶内
+# 165. Compare Version Numbers
+按.分割，可以直接转换为`int`比较
+> `java`中`valueOf`会调用`parseInt`获得`int`值，再转换为`Integer`对象
+当某个数字较短的时候可以默认为0
+``` java
+for(int n = 0; n < Math.max(a1.length, a2.length); n++){
+    int i = (n < a1.length ? Integer.valueOf(a1[n]) : 0);
+    int j = (n < a2.length ? Integer.valueOf(a2[n]) : 0);
+    if(i < j) return -1;
+    else if(i > j) return 1;
+}
+```
+#  166. Fraction to Recurring Decimal
+记录之前出现过的数，下次在遇到说明出现了循环，记录位置，加上"()"
+
+为避免溢出，使用`long`
+# 167. Two Sum II - Input array is sorted
+双指针
