--- a/101-200.md
+++ b/101-200.md
@@ -367,3 +367,41 @@ for(int n = 0; n < Math.max(a1.length, a2.length); n++){
 为避免溢出，使用`long`
 # 167. Two Sum II - Input array is sorted
 双指针
+# 168. Excel Sheet Column Title
+`26`进制，进循环先`-1`，逆序插入
+# 169. Majority Element
+使用map存储某个元素出现了多少个，每次更新最大的个数
+
+或者排序后返回中间的那个数
+
+另外考虑，由于众数多余一半，因此一个众数总能抵消掉其他数
+> 从第一个数开始`count=1`，遇到相同的就加`1`，遇到不同的就减`1`，减到`0`就重新换个数开始计数，总能找到最多的那个
+``` java
+for (int num : nums) {
+   if (count == 0) {
+       majority = num;
+   }
+   if (num != majority) {
+       count--;
+   }
+   else {
+       count++;
+   }
+}
+```
+# 171. Excel Sheet Column Number
+26进制换算，也可以正着算
+``` java
+int ans = 0;
+for(int i=0;i<s.length();i++) {
+    int num = s.charAt(i) - 'A' + 1;
+    ans = ans * 26 + num;
+}
+```
+# 172. Factorial Trailing Zeroes
+直接阶乘肯定速度有点问题，还可能溢出
+
+其实一个`0`肯定由一个`5`而来：`10=2*5`
+
+因此看数字中由多少个`5`：`N/5 + N/5^2 + N/5^3 + ...`
+> `25=5*5` 有二个`5`，因此单除以`5`后，还要考虑除以`25`，依次类推
