--- a/101-200.md
+++ b/101-200.md
@@ -405,3 +405,13 @@ for(int i=0;i<s.length();i++) {
 
 因此看数字中由多少个`5`：`N/5 + N/5^2 + N/5^3 + ...`
 > `25=5*5` 有二个`5`，因此单除以`5`后，还要考虑除以`25`，依次类推
+# 173. Binary Search Tree Iterator
+只能要`O(h)`的空间，因此每次更新到最左边的数据，访问之后再考虑右边
+# 174. Dungeon Game
+记忆化的递归和动态规划都可以
+
+注意如何初始化
+# 175. Combine Two Tables
+``` sql
+select FirstName, LastName, City, State from Person a left join Address b on a.PersonId = b.PersonId
+```
