--- a/101-200.md
+++ b/101-200.md
@@ -415,3 +415,31 @@ for(int i=0;i<s.length();i++) {
 ``` sql
 select FirstName, LastName, City, State from Person a left join Address b on a.PersonId = b.PersonId
 ```
+# 176. Second Highest Salary
+若没有返回`null`，还需要去重
+``` sql
+SELECT
+    IFNULL(
+      (SELECT DISTINCT Salary
+       FROM Employee
+       ORDER BY Salary DESC
+        LIMIT 1 OFFSET 1),
+    NULL) AS SecondHighestSalary
+```
+``` sql
+select MAX(Salary) as SecondHighestSalary from Employee where Salary not in (select MAX(Salary) from Employee)
+```
+# 177. Nth Highest Salary
+``` sql
+SET N = N - 1;
+	RETURN (
+	 select (select distinct salary from employee order by Salary desc limit N,1)
+	);
+```
+``` sql
+SELECT a.score AS Score, COUNT(DISTINCT b.score) AS Rank 
+FROM scores a, scores b 
+WHERE b.score >= a.score 
+GROUP BY a.id 
+ORDER BY a.score DESC
+```
