--- a/101-200.md
+++ b/101-200.md
@@ -443,3 +443,101 @@ WHERE b.score >= a.score
 GROUP BY a.id 
 ORDER BY a.score DESC
 ```
+# 179. Largest Number
+自定义比较器
+``` java
+(o2 + o1).compareTo(o1 + o2)
+```
+# 180. Consecutive Numbers
+``` sql
+select distinct Num as ConsecutiveNums
+from (
+  select Num, 
+    case 
+      when @prev = Num then @count := @count + 1
+      when (@prev := Num) is not null then @count := 1
+    end as CNT
+  from Logs, (select @prev := null,@count := null) as t
+) as temp
+where temp.CNT >= 3
+```
+#181. Employees Earning More Than Their Managers
+``` sql
+select 
+    e.Name as Employee 
+from 
+    Employee e 
+where 
+    e.Salary >(select Salary from Employee where Id=e.ManagerId );
+```
+``` sql
+select 
+    e1.Name as Employee 
+from 
+    Employee as e1 ,Employee as e2 
+where 
+    e1.ManagerId=e2.Id AND e1.Salary>e2.Salary
+```
+# 182. Duplicate Emails
+``` sql
+select Email
+from Person
+group by Email
+having count(Email) > 1;
+```
+``` sql
+select Email from
+(
+  select Email, count(Email) as num
+  from Person
+  group by Email
+) as statistic
+where num > 1
+```
+# 183. Customers Who Never Order
+``` sql
+select customers.name as 'Customers'
+from customers
+where customers.id not in
+(
+    select customerid from orders
+)
+```
+``` sql
+select c.Name as Customers 
+from Customers c left join Orders o on c.Id=o.CustomerId 
+where CustomerId is null;
+```
+# 184. Department Highest Salary
+``` sql
+SELECT d.Name Department, e.Name Employee, e.Salary Salary
+FROM ( 
+    SELECT MAX(Salary) Salary, DepartmentId 
+    FROM Employee 
+    GROUP BY DepartmentId ) s
+JOIN Employee e ON e.DepartmentId = s.DepartmentId AND e.Salary = s.Salary
+JOIN Department d ON d.Id = e.DepartmentId
+```
+# 185. Department Top Three Salaries
+``` sql
+SELECT 
+    d.Name AS Department,
+    e.Name AS Employee,
+    e.Salary AS Salary
+FROM Employee  e,Department  d
+WHERE  d.Id = e.DepartmentId 
+AND  (
+    SELECT 
+        COUNT(DISTINCT Salary)
+    FROM Employee AS ee
+    WHERE ee.DepartmentId = e.DepartmentId AND ee.Salary >= e.Salary
+) <= 3
+ORDER BY DepartmentId ASC,Salary DESC
+```
+# 187. Repeated DNA Sequences
+用`set`存储已经有的，若再次出现且之前没放进去则放进`result`
+
+也可以把`result`设置为`set`，每次出现过就往里面放，自动排除相同的最后返回
+``` java
+new ArrayList<>(result)
+```
