--- a/101-200.md
+++ b/101-200.md
@@ -541,3 +541,26 @@ ORDER BY DepartmentId ASC,Salary DESC
 ``` java
 new ArrayList<>(result)
 ```
+# 188. Best Time to Buy and Sell Stock IV
+
+`k`的优化，不管`k`多大，最多交易`len/2`次
+
+当`k`大于`len/2`，跟交易无数次一样，可以退化成贪心，只要后一天大于前一天就可以买卖
+``` java
+for(int i = 1; i < prices.length; ++i) {
+    if(prices[i] > prices[i-1])
+        result += prices[i] - prices[i-1];
+}
+```
+内存上还可以继续优化, `dp[i][0]`和`dp[i][1]`分别表示第`i`比交易买入和卖出时各自的最大收益
+``` java
+for(int p : prices) {
+    dp[0][0] = Math.max(dp[0][0], -p);
+    dp[0][1] = Math.max(dp[0][1], dp[0][0] + p);
+    for(int i = 1; i < k; ++i) {
+        dp[i][0] = Math.max(dp[i][0], dp[i-1][1] - p);
+        dp[i][1] = Math.max(dp[i][1], dp[i][0] + p);
+    }
+}
+```
+自己的方法是卖出计入一次交易，上面的代码表示买入算是一次交易
