--- a/101-200.md
+++ b/101-200.md
@@ -564,3 +564,28 @@ for(int p : prices) {
 }
 ```
 自己的方法是卖出计入一次交易，上面的代码表示买入算是一次交易
+# 189. Rotate Array
+三次旋转，先旋转左边，然后右边，然后整体
+
+可以模拟每次旋转一个，时间复杂度较高
+
+可以开辟一个数组，最为简单，空间复杂度较高，但是比赛可以这样解题速度快
+# 190. Reverse Bits
+移位操作，为防止溢出使用long来转换，最后转换的时候取32为，且使用parseUnsignedInt函数考虑补码
+
+同步先移位再或的方式来补到32位
+注意，1是int，所有右移超过31位会先与32取模，所以有移32位相当于没有移动，所以需要用1L
+``` java
+1 << 32 == 1
+1L << 32 == 4294967296 //前面全是1
+```
+
+更简单的方法：Integer.reverse(n)
+
+或者取出每一位
+``` java
+for (int i = 0; i <= 31; i++) {
+    result += ((1 & (n >> i)) << (31 - i));
+}
+```
+
