--- a/101-200.md
+++ b/101-200.md
@@ -571,21 +571,31 @@ for(int p : prices) {
 
 可以开辟一个数组，最为简单，空间复杂度较高，但是比赛可以这样解题速度快
 # 190. Reverse Bits
-移位操作，为防止溢出使用long来转换，最后转换的时候取32为，且使用parseUnsignedInt函数考虑补码
+移位操作，为防止溢出使用`long`来转换，最后转换的时候取`32`为，且使用`parseUnsignedInt`函数考虑补码
 
-同步先移位再或的方式来补到32位
-注意，1是int，所有右移超过31位会先与32取模，所以有移32位相当于没有移动，所以需要用1L
+同步先移位再或的方式来补到`32`位
+
+注意，`1`是`int`，所有右移超过`31`位会先与`32`取模，所以有移`32`位相当于没有移动，所以需要用`1L`
 ``` java
 1 << 32 == 1
 1L << 32 == 4294967296 //前面全是1
 ```
 
-更简单的方法：Integer.reverse(n)
+更简单的方法：`Integer.reverse(n)`
 
-或者取出每一位
+或者取出每一位偏移后相加
 ``` java
 for (int i = 0; i <= 31; i++) {
     result += ((1 & (n >> i)) << (31 - i));
 }
 ```
+# 191. Number of 1 Bits
+转换成`string`后求`1`的个数
 
+或者对每一位求是否为`1`
+``` java
+while (n != 0) {
+    n &= (n - 1);
+    count++;
+}
+```
