--- a/101-200.md
+++ b/101-200.md
@@ -599,3 +599,60 @@ while (n != 0) {
     count++;
 }
 ```
+# 192. Word Frequency
+``` bash
+awk '{for(i=1;i<=NF;i++){res[$i]+=1}}END{for(k in res){print k" "res[k]} }' words.txt | sort -nr -k2
+``` 
+``` bash
+cat words.txt | tr -s ' ' '\n' | sort | uniq -c | sort -r | awk '{printf $2 " " $1 "\n"}'
+```
+# 193. Valid Phone Numbers
+``` bash
+grep -P '^(\d{3}-|\(\d{3}\) )\d{3}-\d{4}$' file.txt
+sed -n -r '/^([0-9]{3}-|\([0-9]{3}\) )[0-9]{3}-[0-9]{4}$/p' file.txt
+awk '/^([0-9]{3}-|\([0-9]{3}\) )[0-9]{3}-([0-9]{4})$/' file.txt
+```
+# 194. Transpose File
+``` bash
+awk '{
+    for (i=1;i<=NF;i++) {
+        if (NR==1){
+            res[i]=$i
+        } 
+        else {
+            res[i]=res[i] " " $i
+        }
+    }
+}
+END {
+    for (i=1;i<=NF;i++) {
+        print res[i]
+    }
+}' file.txt
+```
+# 195. Tenth Line
+``` bash
+awk 'NR == 10' file.txt
+sed -n 10p file.txt
+tail -n+10 file.txt|head -1 tail -n
+```
+# 196. Delete Duplicate Emails
+``` sql
+delete p1 
+from Person p1 ,Person p2
+where p1.Email =p2.Email and p1.Id > p2.Id
+```
+# 197. Rising Temperature
+``` sql
+select w1.Id 
+from Weather w1 
+join Weather w2 
+on datediff(w1.RecordDate,w2.RecordDate)=1 and w1.Temperature>w2.Temperature;
+```
+# 
+直接`dp`，考虑之前的状态对后面状态的影响
+
+可以化简递推式
+``` java
+dp[i] = max(dp[i-2]+nums[i], dp[i-1])
+```
