--- a/201-300.md
+++ b/201-300.md
@@ -88,3 +88,41 @@ while (right < nums.length) {
 
 这里使用了度数，将`0`度元素加入`queue`，依次遍历，在对每个`0`遍历的时候，将指向他们的节点度数`-1`
 >为提高效率，可以维护一个指向该节点的`list`，存在`map`中，每次的`0`度元素拿出来一个`list`操作
+# 211. Add and Search Word - Data structure design
+用`map`来保存，`string`的长度为`key`
+
+也可以考虑前缀树来存储[208](#208-implement-trie-(prefix-tree))
+# 212. Word Search II
+如果使用[79](https://github.com/humwawe/leetcode/blob/master/1-100.md#79-word-serch)，则超时
+
+考虑使用前缀树，将所有单词加入树中，遍历`board`，看是否当前单词能在树中找到
+
+更好的前缀树结构，只需像链表那样传入单个`root`，并且该节点如果是结尾就保存到此位置的单词
+``` java
+class TrieNode2 {
+    String word;
+    TrieNode[] next = new TrieNode[26];
+
+    TrieNode add(char chr) {
+        if (next[chr - 'a'] != null) {
+            return next[chr - 'a'];
+        }
+        next[chr - 'a'] = new TrieNode();
+        return next[chr - 'a'];
+    }
+
+    boolean ifExists(char chr) {
+        return next[chr - 'a'] != null;
+    }
+}
+for (int i = 0; i < words.length; i++) {
+    TrieNode node = root;
+    for (int j = 0; j < words[i].length(); j++) {
+        node = node.add(words[i].charAt(j));
+    }
+    node.word = words[i];
+}
+```
+# 213. House Robber II
+考虑偷第一家和不偷第一家的情况，遍历`[0~n-1]`和`[1~n]`
+> 两个`dp`初始化不一样，结束条件不一样，比较难通过增加一个`dp`状态一次解决，也可以增加一个状态，两者互相不干扰
