--- a/201-300.md
+++ b/201-300.md
@@ -125,4 +125,33 @@ for (int i = 0; i < words.length; i++) {
 ```
 # 213. House Robber II
 考虑偷第一家和不偷第一家的情况，遍历`[0~n-1]`和`[1~n]`
-> 两个`dp`初始化不一样，结束条件不一样，比较难通过增加一个`dp`状态一次解决，也可以增加一个状态，两者互相不干扰
+> 两个`dp`初始化不一样，结束条件不一样，比较难通过增加一个`dp`状态一次解决。当然也可以解决，就是增加一个状态，两者互相不干扰
+# 214. Shortest Palindrome
+要在前面加，说明需求得从第一个开始的最长字符串，将之后的颠倒加入前面
+
+从头和尾向中间判断回文会超时，采用从中间往两头由于案例的设计可以更快判断出来，勉强通过，更好的方法是使用`kmp`
+
+在每一步把后面的元素直接先加到`StringBuilder`中，最后直接连接，而不是每次记录`len`的长度会更快不至于超时
+``` java
+public String shortestPalindrome(String s) {
+        StringBuilder str = new StringBuilder("");
+        String result = null;
+        for(int i = s.length() - 1; i > 0; i--) {
+            if(isPalindrome(s, 0, i)) {
+                break;
+            }
+            str.append(s.charAt(i));
+        }
+        result = str.toString() + s;
+        return result;
+    }
+public Boolean isPalindrome(String s, int start, int tail) {
+    while(tail > start) {
+        if(s.charAt(start++) != s.charAt(tail--)) {
+            return false;
+        }
+    }
+    return true;
+}
+```
+
