--- a/201-300.md
+++ b/201-300.md
@@ -154,4 +154,30 @@ public Boolean isPalindrome(String s, int start, int tail) {
     return true;
 }
 ```
+# 215. Kth Largest Element in an Array
+* 排序
+>可以直接排序取第`k`大的元素
 
+* 最小堆
+>维护一个前`k`大的最小堆，代码可以优化
+``` java
+for(int num : nums){ 
+   queue.add(num);
+   if(queue.size() > k) queue.poll();           
+}
+```
+* 桶排序
+>分成`max-min+1`个桶，以`nums[i]-min`作为`bucket`索引，记录每个桶的元素次数，从后往前数每个桶的元素个数
+``` java
+int[] bucket = new int[max - min + 1];
+for (int i = 0; i < nums.length; i++) {
+    bucket[nums[i] - min]++;
+}
+int count = 0;
+for (int j = bucket.length - 1; j >= 0; j--) {
+    count += bucket[j];
+    if (count >= k) return j + min;
+}
+```
+* 快排
+> 确定一个位置看是否是大于`k`或小于`k`，再分治
