--- a/201-300.md
+++ b/201-300.md
@@ -181,3 +181,9 @@ for (int j = bucket.length - 1; j >= 0; j--) {
 ```
 * 快排
 > 确定一个位置看是否是大于`k`或小于`k`，再分治
+# 216. Combination Sum III
+递归
+# 217. Contains Duplicate
+用set保存经历过的元素
+
+或者排序看是否有地方有重复
