--- a/201-300.md
+++ b/201-300.md
@@ -187,3 +187,6 @@ for (int j = bucket.length - 1; j >= 0; j--) {
 用set保存经历过的元素
 
 或者排序看是否有地方有重复
+# 218. The Skyline Problem
+遍历坐标轴可能的位置，选取最大的高度，若与上个高度不一致，则记录
+> 高度的维护采用最大堆，入点加入，出点删去
