--- a/201-300.md
+++ b/201-300.md
@@ -190,3 +190,7 @@ for (int j = bucket.length - 1; j >= 0; j--) {
 # 218. The Skyline Problem
 遍历坐标轴可能的位置，选取最大的高度，若与上个高度不一致，则记录
 > 高度的维护采用最大堆，入点加入，出点删去
+# 219. Contains Duplicate II
+直接遍历比较会超时，可以维护一个`k`个元素的`set`，当超过`k`时就将最早的元素删除
+
+也可以记录每个元素的下表，排序，遍历看是否索引值是否在`k`内
