--- a/201-300.md
+++ b/201-300.md
@@ -194,3 +194,5 @@ for (int j = bucket.length - 1; j >= 0; j--) {
 直接遍历比较会超时，可以维护一个`k`个元素的`set`，当超过`k`时就将最早的元素删除
 
 也可以记录每个元素的下表，排序，遍历看是否索引值是否在`k`内
+# 220. Contains Duplicate III
+采用`TreeSet`，取离该元素最近的元素
