--- a/201-300.md
+++ b/201-300.md
@@ -190,9 +190,30 @@ for (int j = bucket.length - 1; j >= 0; j--) {
 # 218. The Skyline Problem
 遍历坐标轴可能的位置，选取最大的高度，若与上个高度不一致，则记录
 > 高度的维护采用最大堆，入点加入，出点删去
+
+或者考虑分治，主要是要解决如何合并
 # 219. Contains Duplicate II
 直接遍历比较会超时，可以维护一个`k`个元素的`set`，当超过`k`时就将最早的元素删除
 
 也可以记录每个元素的下表，排序，遍历看是否索引值是否在`k`内
 # 220. Contains Duplicate III
 采用`TreeSet`，取离该元素最近的元素
+# 221. Maximal Square
+`dp`，该位置为前三个位置最小的`+1`
+# 222. Count Complete Tree Nodes
+采用递归的思路即可遍历求出
+``` java
+return root == null ? 0 : countNodes(root.left) + countNodes(root.right) + 1;
+```
+为利用完全二叉树的性质，考虑求两边的高度`l`，`h`（不断访问左边）
+* 若`l == h`说明左边是满树，节点个数为`1(root) + (1 << l) - 1`，再求一个右边节点个数即可
+* 若`l != h`说明右边是满树，节点个数为`1(root) + (1 << r) - 1`，再求一个左边节点即可
+``` java
+int l = getDepth(root.left);
+int r = getDepth(root.right);
+if (l == r) {
+    return (1 << l) + countNodes(root.right);
+} else {
+    return (1 << r) + countNodes(root.left);
+}
+```
