--- a/201-300.md
+++ b/201-300.md
@@ -221,3 +221,8 @@ if (l == r) {
 不重叠返回两个矩形的长度
 
 其他重叠情况可以一起解决
+# 224. Basic Calculator
+加号减号都只是代表了数字的符号，真正运算是在碰到数字的时候，而遇到了括号，则将当前的结果和符号入栈
+
+更普遍的方式可以转为后缀表达式
+> 为了处理负号的问题，可以遍历，若`i`处为`-`，当`i`为`0`或者`i-1`为`(`时，在前面加`0`
