--- a/201-300.md
+++ b/201-300.md
@@ -226,3 +226,17 @@ if (l == r) {
 
 更普遍的方式可以转为后缀表达式
 > 为了处理负号的问题，可以遍历，若`i`处为`-`，当`i`为`0`或者`i-1`为`(`时，在前面加`0`
+# 225. Implement Stack using Queues
+使用两个队列，插入的时候先插入第二个，再将第一个所有元素放入第二个，然后交换两个队列
+
+也可以使用一个队列，先插入一个数，然后每次将`n-1`个数移到队列后
+``` java
+public void push(int x) {
+    q1.add(x);
+    int sz = q1.size();
+    while (sz > 1) {
+        q1.add(q1.remove());
+        sz--;
+    }
+}
+```
