--- a/201-300.md
+++ b/201-300.md
@@ -240,3 +240,45 @@ public void push(int x) {
     }
 }
 ```
+# 226. Invert Binary Tree
+递归左右两边的树
+# 227. Basic Calculator II
+中缀转后缀然后求值，逻辑比较简单但是代码复杂
+
+考虑本题只有简单符号，可以在第一个元素前面看作有个`+`号
+``` java
+public static int calculate(String s) {
+    int res = 0;
+    char sign = '+';
+    char[] chars = s.toCharArray();
+    Stack<Integer> stack = new Stack<>();
+    int d = 0;
+    for (int i = 0; i < s.length(); i++) {
+        if (chars[i] >= '0') {
+            d = chars[i] - '0' + 10 * d;
+        }
+        if ((chars[i] < '0' && chars[i] != ' ') || i == chars.length - 1) {
+            switch (sign) {
+                case '+':
+                    stack.push(d);
+                    break;
+                case '-':
+                    stack.push(-d);
+                    break;
+                case '*':
+                    stack.push(d * stack.pop());
+                    break;
+                default:
+                    stack.push(stack.pop() / d);
+                    break;
+            }
+            sign = chars[i];
+            d = 0;
+        }
+    }
+    while (!stack.empty()) {
+        res += stack.pop();
+    }
+    return res;
+}
+```
