--- a/201-300.md
+++ b/201-300.md
@@ -282,3 +282,19 @@ public static int calculate(String s) {
     return res;
 }
 ```
+# 228. Summary Ranges
+直接找区间
+# 229. Majority Element II
+多数选举，没三个不一样的可以消掉，最后有可能还剩两个，再遍历一次
+# 230. Kth Smallest Element in a BST
+算左边的节点个数，然后考虑往哪个方向继续下去
+
+也可以中序遍历找第k个元素
+# 231. Power of Two
+位运算去掉一个`1`看是否为`0`
+
+也可以一直与`2`除
+# 232. Implement Queue using Stacks
+两个栈一个用于进栈，一个用于出栈
+
+也可以每次入栈时候，先将一个栈的元素放到另一个栈里，再倒回来
