--- a/201-300.md
+++ b/201-300.md
@@ -298,3 +298,22 @@ public static int calculate(String s) {
 两个栈一个用于进栈，一个用于出栈
 
 也可以每次入栈时候，先将一个栈的元素放到另一个栈里，再倒回来
+# 233. Number of Digit One
+计算每个位置1的个数
+以算百位上`1`为例子:   假设百位上是`0`,`1`, 和`>=2`三种情况: 
+* case 1
+> `n=3141092`, `a=31410`, `b=92`. 计算百位上`1`的个数应该为`3141 *100`次.
+* case 2
+> `n=3141192`, `a=31411`, `b=92`. 计算百位上`1`的个数应该为`3141 *100 + (92+1)`次. 
+* case 3
+> `n=3141592`, `a=31415`, `b=92`. 计算百位上`1`的个数应该为`(3141+1) *100`次. 
+
+以上三种情况可以用 一个公式概括
+> `(a + 8) / 10 * m + (a % 10 == 1) * (b + 1);`
+
+又以`24071`为例，如果我们想计算百位上`1`出现的次数，具体思路如下：
+获取百位的高位为`24`，获取百位的低位为`71`，当前百位数字为`0`。从高位出发来分析，百位出现的次数有：`00100~00190,01100~01190,02100~02190,…,23100~23190`。总共有`24*100`个`1`出现
+
+如果百位为`1`的时候，那除了上述的`24*100`个`1`之外，还包括：`24100～24171`，共`71 + 1`个1，即总共：`24 * 100 + 71 + 1`
+
+如果百位大于`1`例如为`6`的时候，那除了最开始的`24*100`个`1`之外，还包括了：`24100~24199`，共`100`个`1`，即总共：`(24 + 1)*100`
