--- a/201-300.md
+++ b/201-300.md
@@ -317,3 +317,27 @@ public static int calculate(String s) {
 如果百位为`1`的时候，那除了上述的`24*100`个`1`之外，还包括：`24100～24171`，共`71 + 1`个1，即总共：`24 * 100 + 71 + 1`
 
 如果百位大于`1`例如为`6`的时候，那除了最开始的`24*100`个`1`之外，还包括了：`24100~24199`，共`100`个`1`，即总共：`(24 + 1)*100`
+# 234. Palindrome Linked List
+找到中间节点后反转后边的节点，然后比较
+# 235. Lowest Common Ancestor of a Binary Search Tree
+如果两个节点都大于`root`，则在右边，如果两个节点都小于`root`则在左边，如果分叉了，说明`root`便是公共祖先 
+
+考虑如果是普通二叉树
+``` java
+if (root == p || root == q || root == null) {
+    return root;
+}
+TreeNode left = lowestCommonAncestor(root.left, p, q);
+TreeNode right = lowestCommonAncestor(root.right, p, q);
+if (left != null && right == null) {
+    return left;
+} else if (right != null && left == null) {
+    return right;
+} else if (left == null && right == null) {
+    return null;
+} else {
+    return root;
+}
+```
+ 
+ 
