--- a/201-300.md
+++ b/201-300.md
@@ -343,4 +343,30 @@ if (left != null && right == null) {
 同[235](#235-lowest-common-ancestor-of-a-binary-search-tree)的普通二叉树情况
 # 237. Delete Node in a Linked List
 将后一个元素跟次元素交换，并将`next`指向`next`的`next`
- 
+# 238. Product of Array Except Self
+由于不能乘起来再除，所以先左遍历求有一下左边的值，用`left`来记录乘积，然后再右遍历一次，求右边的，跟结果相乘
+# 239. Sliding Window Maximum
+可以暴力每次求一个区间的最大值
+
+或者用堆来存，不过要考虑数值会重复的情况
+
+采用双向队列（单调栈，取数的时候从头取）
+> 队列中数值（存放索引）从大到小排，遇到大的就把前面的移除，保证队首是当前区间的最大值，判断区间移动时是否需要移除头的位置
+
+可以考虑分块的动态规划，分成`n/k+1`个块，对每个块从左往右和右往左求当前最大值
+``` java
+for (int i = 1; i < n; i++) {
+    if (i % k == 0) {
+        left[i] = nums[i];
+    } else {
+        left[i] = Math.max(left[i - 1], nums[i]);
+    }
+    int j = n - i - 1;
+    if ((j + 1) % k == 0) {
+        right[j] = nums[j];
+    } else {
+        right[j] = Math.max(right[j + 1], nums[j]);
+    }
+}
+```
+区间的最大值即为`max(right[i], left[i + k - 1])`
