--- a/201-300.md
+++ b/201-300.md
@@ -370,3 +370,11 @@ for (int i = 1; i < n; i++) {
 }
 ```
 区间的最大值即为`max(right[i], left[i + k - 1])`
+# 240. Search a 2D Matrix II
+从左下角开始，若大于则最后一行可以不要，小于则第一列可以不要，依此类推
+# 241. Different Ways to Add Parentheses
+此题可以看作以符号为根构建不同二叉树
+
+因此思路可以参考[95](https://github.com/humwawe/leetcode/blob/master/1-100.md#95-unique-binary-search-trees-ii)
+# 242. Valid Anagram
+记录`s`中每个字符出现的次数，遍历`t`，看是否又小于`0`的出现，注意需要首先比较长度是否一致
