--- a/201-300.md
+++ b/201-300.md
@@ -378,3 +378,19 @@ for (int i = 1; i < n; i++) {
 因此思路可以参考[95](https://github.com/humwawe/leetcode/blob/master/1-100.md#95-unique-binary-search-trees-ii)
 # 242. Valid Anagram
 记录`s`中每个字符出现的次数，遍历`t`，看是否又小于`0`的出现，注意需要首先比较长度是否一致
+# 257. Binary Tree Paths
+前序遍历，记录路径，到叶子节点加入`result`
+# 258. Add Digits
+按题意循环求解即可
+
+题目有要求复杂度，说明应该是可以找规律的。其实除了`0`之外是一个`1-9`的循环
+
+推导：
+>加起来小于十就返回数字，而这个数字对9取余也可以也不变，除了9取余为0需要处理为9
+* num = a * 10000 + b * 1000 + c * 100 + d * 10 + e
+* num = (a + b + c + d + e) + (a * 9999 + b * 999 + c * 99 + d * 9)
+* num % 9 = (a + b + c + d + e) % 9
+>对`a + b + c + d + e`的结果反复执行同类操作，最后的结果就是一个`1-9`的数字加上一串数字，这串数字永远都是可以被`9`整除的
+``` java
+return (num != 0 && 0 == num % 9) ? 9 : num % 9;
+```
