--- a/201-300.md
+++ b/201-300.md
@@ -394,3 +394,22 @@ for (int i = 1; i < n; i++) {
 ``` java
 return (num != 0 && 0 == num % 9) ? 9 : num % 9;
 ```
+# 260. Single Number III
+位运算，先计算异或值，然后用异或位为`1`的进行分组求解
+
+求最右侧的`1`，可以
+``` java
+diff &= -diff
+```
+
+另一种思路是，因为只有两个值，所以可以用个`set`存，若存在了就删除，最后剩下的便是结果
+# 262. Trips and Users
+``` sql
+select b.request_at Day,
+round(sum(case status when 'completed' then 0 else 1 end)/count(0),2) `Cancellation Rate`  
+from users a left join trips b
+on a.users_id = b.client_id
+where a.banned = 'No'
+and b.request_at > '2013-09-30' and b.request_at < '2013-10-04'
+group by b.request_at
+```
