--- a/201-300.md
+++ b/201-300.md
@@ -413,3 +413,20 @@ where a.banned = 'No'
 and b.request_at > '2013-09-30' and b.request_at < '2013-10-04'
 group by b.request_at
 ```
+# 263. Ugly Number
+一直与`2`，`3`，`5`相除，直到能除到`1`
+
+# 264. Ugly Number II
+考虑如何构建丑数列表
+* 第一个丑数为`1`
+* 第二个丑数为`1*2`，`1*3`，`1*5`中的最小值，此时选到`2`，构建了两个丑数值`1，2`
+* 第三个丑数为`2*2`（第一个`2`来自上一论选到最小值后`index+1`），`1*3`，`1*5`，构建了三个丑数`1,2,3`
+* 第四个丑数为`2*2`，`2*3`（第一个`2`来自上一论选到最小值后`index+1`），`1*5`，构建了三个丑数`1,2,3,4`
+* 依此类推
+> 注意在判断`index`移动时，不能用`else if`，这样会重复计算
+# 268. Missing Number
+先异或一便`0-n`，再异或`nums`中的元素，剩下的就是少的
+
+也可以用`set`去查找
+
+也可以用数据方法，求出应该的和再减去现再的和
