--- a/201-300.md
+++ b/201-300.md
@@ -432,3 +432,18 @@ group by b.request_at
 也可以用数据方法，求出应该的和再减去现再的和
 # 273. Integer to English Words
 每三位数分开提交
+# 274. H-Index
+计数，注意到当引用次数超过`len`，把引用次数讲到`len`也不会改变结果，这样用桶的时候相当于缩小了空间
+
+还可以排序，然后找到对应位置
+``` java
+// 排序（注意这里是升序排序，因此下面需要倒序扫描）
+Arrays.sort(citations);
+int i = 0;
+while (i < citations.length && citations[citations.length - 1 - i] > i) {
+    i++;
+}
+return i;
+```
+# 275. H-Index II
+跟[274](#274-h-index)一样，也可以二分
