--- a/201-300.md
+++ b/201-300.md
@@ -447,3 +447,35 @@ return i;
 ```
 # 275. H-Index II
 跟[274](#274-h-index)一样，也可以二分
+# 278. First Bad Version
+二分查找
+# 279. Perfect Squares
+利用图的层次遍历，要记录已经放过的`sum`，之后再遇到不需要再放了
+
+或者`dp`
+``` java
+for (int i = 1; i <= n; i++) {
+    for (int j = 1; j * j <= i; j++) {
+        dp[i] = Math.min(dp[i - j * j] + 1, dp[i]);
+    }
+}
+```
+
+四平方和定理：任何一个整数都可以表示为不超过`4`个数的平方和
+>当且仅当`n = 4^a(8b+7)`时，`n`恰好可以表示为`4`个数的平方和
+``` java
+while (n % 4 == 0)
+    n /= 4;
+if (n % 8 == 7)
+    return 4;
+for (int a = 0; a * a <= n; ++a) {
+    int b = (int) Math.sqrt(n - a * a);
+    if (a * a + b * b == n) {
+        if (a == 0) {
+            return 1;
+        }
+        return 2;
+    }
+}
+return 3;
+```
