--- a/201-300.md
+++ b/201-300.md
@@ -479,3 +479,15 @@ for (int a = 0; a * a <= n; ++a) {
 }
 return 3;
 ```
+# 282. Expression Add Operators
+递归考虑多位数字组合在一起的情况
+
+首位为`0`不再需要处理多位
+
+`long`来避免移除
+
+记录上一个值，当遇到乘法的时候，先把上一个值减去，再与当前值相乘
+# 283. Move Zeroes
+用一个指针将所有非零元素加入数组前面，直接再原数组上操作
+# 284. Peeking Iterator
+每次`peek`的时候用一个`cache`来保存`next`（只有迭代器的`next`能用）的值
