--- a/201-300.md
+++ b/201-300.md
@@ -491,3 +491,7 @@ return 3;
 用一个指针将所有非零元素加入数组前面，直接再原数组上操作
 # 284. Peeking Iterator
 每次`peek`的时候用一个`cache`来保存`next`（只有迭代器的`next`能用）的值
+# 287. Find the Duplicate Number
+排序或者`set`都不太满足要求
+
+可以用两个指针，用下标的走法转换为链表环的判断
