--- a/201-300.md
+++ b/201-300.md
@@ -495,3 +495,8 @@ return 3;
 排序或者`set`都不太满足要求
 
 可以用两个指针，用下标的走法转换为链表环的判断
+# 289. Game of Life
+开另一个数组去记录变化后的值
+
+如果要在原地变化，可以考虑更多的数字来表示状态
+>即将死亡的活细胞置为`2`， 把即将复活的死细胞 ，置为`-1`； 则在判断 当前细胞`>0`时当前为活细胞，`<= 0`当前为死细胞
