--- a/201-300.md
+++ b/201-300.md
@@ -500,3 +500,9 @@ return 3;
 
 如果要在原地变化，可以考虑更多的数字来表示状态
 >即将死亡的活细胞置为`2`， 把即将复活的死细胞 ，置为`-1`； 则在判断 当前细胞`>0`时当前为活细胞，`<= 0`当前为死细胞
+# 290. Word Pattern
+用两个`map`分别记录对用关系，先看是否在里面，没在便放进去，这样判断的时候可以避免空指针
+# 292. Nim Game
+`dp`可以解决，但容易超出内存或者时间，找规律是如果`n`是`4`的倍数就赢不了
+# 295. Find Median from Data Stream
+左边最小堆和右边最大堆，每次放到一个堆再弹出到另一个堆，这样保证数字是没问题的，当`size`相差为`2`后便调整平衡
