--- a/201-300.md
+++ b/201-300.md
@@ -506,3 +506,6 @@ return 3;
 `dp`可以解决，但容易超出内存或者时间，找规律是如果`n`是`4`的倍数就赢不了
 # 295. Find Median from Data Stream
 左边最小堆和右边最大堆，每次放到一个堆再弹出到另一个堆，这样保证数字是没问题的，当`size`相差为`2`后便调整平衡
+# 297. Serialize and Deserialize Binary Tree
+ 按层次遍历解析即可
+ 
