--- a/201-300.md
+++ b/201-300.md
@@ -508,4 +508,27 @@ return 3;
 左边最小堆和右边最大堆，每次放到一个堆再弹出到另一个堆，这样保证数字是没问题的，当`size`相差为`2`后便调整平衡
 # 297. Serialize and Deserialize Binary Tree
  按层次遍历解析即可
+ # 299. Bulls and Cows
+ 可以考虑求两个字符串的交集，然后先算个`A`，再由交集减去`A`即可得到`B`
+ # 300. Longest Increasing Subsequence
+ 循环dp，求i时使用前面所有的状态，最后的结果时返回整个dp中最大的
  
+ 还可以利用一个数组来保存最大的序列，每次替换的二分的去做
+ ``` java
+int maxL = 0;
+int[] dp = new int[nums.length];
+for(int num : nums) {
+    int lo = 0, hi = maxL;
+    while(lo < hi) {
+        int mid = lo+(hi-lo)/2;
+        if(dp[mid] < num)
+            lo = mid+1;
+        else
+            hi = mid;
+    }
+    dp[lo] = num;
+    if(lo == maxL)
+        maxL++;
+}
+return maxL;
+```
