--- a/301-400.md
+++ b/301-400.md
@@ -10,3 +10,10 @@
 记录前缀和
 # 304. Range Sum Query 2D - Immutable
 记录二维点的前缀和
+# 306. Additive Number
+注意到确定了前两个值便可以推导出是否是`true`
+> 因此遍历前两个值的位置最多的位置，然后判断是否可行
+
+> 采用`long`避免溢出
+
+> `0`的位置不能在开头
