--- a/301-400.md
+++ b/301-400.md
@@ -22,3 +22,9 @@
 > 注意查找边界
 
 > 更新时用了差值，所以要记得最后更新`nums`
+# 309. Best Time to Buy and Sell Stock with Cooldown
+动态规划
+* `0`表示刚卖出
+* `1`表示持有（买入）
+* `2`表示冷冻期
+注意这里多了冷冻期的状态，因此不持有变为两个状态，一个是刚卖出，一个是冷冻期
