--- a/301-400.md
+++ b/301-400.md
@@ -28,3 +28,5 @@
 * `1`表示持有（买入）
 * `2`表示冷冻期
 注意这里多了冷冻期的状态，因此不持有变为两个状态，一个是刚卖出，一个是冷冻期
+# 310. Minimum Height Trees
+用邻接矩阵构造图，记录每个点的度数，将边缘度数`1`的去除掉，直到剩下最多最后两个点
