--- a/301-400.md
+++ b/301-400.md
@@ -30,3 +30,14 @@
 注意这里多了冷冻期的状态，因此不持有变为两个状态，一个是刚卖出，一个是冷冻期
 # 310. Minimum Height Trees
 用邻接矩阵构造图，记录每个点的度数，将边缘度数`1`的去除掉，直到剩下最多最后两个点
+# 312. Burst Balloons
+直接搜索每次拿出一个（将nums减取一个后进入下层递归）遍历所有情况的思路会超时
+
+上面的方法不好加记忆，因此考虑一个区间的递归左右两边，加上记忆能够通过
+
+或者直接`dp`
+``` java
+dp[i][j] = dp[i][k] + dp[k][j] + nums[i]*nums[k]*nums[j]
+```
+需要注意先求的`dp`要小于大的区间，因此用固定长度来遍历求解所有小的区间
+> 另外左右两边的`1`可以当作哨兵加入数组
