--- a/301-400.md
+++ b/301-400.md
@@ -41,3 +41,9 @@ dp[i][j] = dp[i][k] + dp[k][j] + nums[i]*nums[k]*nums[j]
 ```
 需要注意先求的`dp`要小于大的区间，因此用固定长度来遍历求解所有小的区间
 > 另外左右两边的`1`可以当作哨兵加入数组
+# 313. Super Ugly Number
+跟[264](https://github.com/humwawe/leetcode/blob/master/201-300.md#264-ugly-number-ii)思路一样，记录下标求当前最小的一个
+  
+
+  
+
