--- a/301-400.md
+++ b/301-400.md
@@ -43,7 +43,10 @@ dp[i][j] = dp[i][k] + dp[k][j] + nums[i]*nums[k]*nums[j]
 > 另外左右两边的`1`可以当作哨兵加入数组
 # 313. Super Ugly Number
 跟[264](https://github.com/humwawe/leetcode/blob/master/201-300.md#264-ugly-number-ii)思路一样，记录下标求当前最小的一个
-  
+# 315. Count of Smaller Numbers After Self
+暴力超时
+
+考虑将后面的元素放入一个有序列表中，对新元素进行二分查找并且插入  
 
   
 
