--- a/301-400.md
+++ b/301-400.md
@@ -46,7 +46,7 @@ dp[i][j] = dp[i][k] + dp[k][j] + nums[i]*nums[k]*nums[j]
 # 315. Count of Smaller Numbers After Self
 暴力超时
 
-考虑将后面的元素放入一个有序列表中，对新元素进行二分查找并且插入  
+考虑将后面的元素放入一个有序列表中，对新元素进行二分查找并且插入，插入位置便是求解值 
 
   
 
