--- a/301-400.md
+++ b/301-400.md
@@ -47,6 +47,7 @@ dp[i][j] = dp[i][k] + dp[k][j] + nums[i]*nums[k]*nums[j]
 暴力超时
 
 考虑将后面的元素放入一个有序列表中，对新元素进行二分查找并且插入，插入位置便是求解值 
-
+# 316. Remove Duplicate Letters
+用栈维护整个结果，如果当前的值大于栈顶即可以直接放进去，如果当前值小于栈顶，说明栈顶可能可以不要，而不要的依据便是后面是否还有栈顶的这个元素
   
 
