--- a/301-400.md
+++ b/301-400.md
@@ -49,5 +49,31 @@ dp[i][j] = dp[i][k] + dp[k][j] + nums[i]*nums[k]*nums[j]
 考虑将后面的元素放入一个有序列表中，对新元素进行二分查找并且插入，插入位置便是求解值 
 # 316. Remove Duplicate Letters
 用栈维护整个结果，如果当前的值大于栈顶即可以直接放进去，如果当前值小于栈顶，说明栈顶可能可以不要，而不要的依据便是后面是否还有栈顶的这个元素
+# 318. Maximum Product of Word Lengths
+将每个元素排序后放入`set`中，然后遍历每个`set`，找没有交集，乘积最大的元素
+
+交集可以用`retainAll()`，但是元set就改变了需要注意，另外取`set`的时候也要新`new`一个使得原`set`不变
+
+在判断是否重复可以使用位运算，判重就可以直接相与，然后与`0`比较
+``` java
+int wlength = words.length;
+int[] arr = new int[wlength];
+for(int i = 0; i < wlength; ++i){
+    int length = words[i].length();
+    for(int j = 0; j < length; ++j){
+        arr[i] |= 1 << (words[i].charAt(j) - 'a');
+    }
+}
+int ans = 0;
+for(int i = 0; i < wlength; ++i){
+    for(int j = i + 1; j < wlength; ++j){
+        if((arr[i] & arr[j]) == 0){
+            int k = words[i].length() * words[j].length();
+            ans = ans < k ? k : ans;
+        }
+    }
+}
+return ans;
+```
   
 
