--- a/301-400.md
+++ b/301-400.md
@@ -75,5 +75,10 @@ for(int i = 0; i < wlength; ++i){
 }
 return ans;
 ```
-  
+# 319. Bulb Switcher
+直接遍历肯定超时
+
+统计当前数的因子个数，为奇数就会亮，也会超时
+
+考虑因子个数会发现当数为平方数的时候因子个数奇数，因此平方数会亮起来，直接求平方根就是平方数的个数
 
