--- a/301-400.md
+++ b/301-400.md
@@ -81,4 +81,10 @@ return ans;
 统计当前数的因子个数，为奇数就会亮，也会超时
 
 考虑因子个数会发现当数为平方数的时候因子个数奇数，因此平方数会亮起来，直接求平方根就是平方数的个数
+# 321. Create Maximum Number
+从第一个当中抽出`0`到`k`个元素，则从第二个中抽出`k-i`，此时考虑抽出`i`个元素的最大值，和合并起来的最大值
+
+抽出`i`个元素的最大值可以用`stack`来操作，当某个元素大于栈顶后考虑是否能将其弹出，弹出的时机是剩下的元素和当前栈顶的元素满足`i`个
+
+合并起来要注意当两个元素想等时候移动哪一个指针，要看后面的元素哪个大
 
