--- a/301-400.md
+++ b/301-400.md
@@ -87,4 +87,19 @@ return ans;
 抽出`i`个元素的最大值可以用`stack`来操作，当某个元素大于栈顶后考虑是否能将其弹出，弹出的时机是剩下的元素和当前栈顶的元素满足`i`个
 
 合并起来要注意当两个元素想等时候移动哪一个指针，要看后面的元素哪个大
+# 322. Coin Change
+类似图的方法去`bfs`搜索，每次将可能的值放到队列中，需要记录已放过的值，避免重复计算
+
+也可以用dp，跟完全背包问题很像`dp[i]=Math.min(dp[i],dp[i-coin]+1)`
+``` java
+dp[0] = 0;
+for (int i = 1; i <= amount; ++i) {
+    dp[i] = Integer.MAX_VALUE;
+    for (int coin : coins) {
+        if (i - coin >= 0 && dp[i - coin] != Integer.MAX_VALUE) {
+            dp[i] = Math.min(dp[i], dp[i - coin] + 1);
+        }
+    }
+}
+```
 
