--- a/301-400.md
+++ b/301-400.md
@@ -102,4 +102,8 @@ for (int i = 1; i <= amount; ++i) {
     }
 }
 ```
+# 324. Wiggle Sort II
+排序后进行穿插，穿插的时候从后向前，可以避免`[4,5,5,6]`这种错误
+> 穿插位置可以是`len`和`(len-1)/2`
 
+考虑O(n)的复杂度，使用快排思路找到中位数，然后构造答案
