--- a/301-400.md
+++ b/301-400.md
@@ -106,4 +106,16 @@ for (int i = 1; i <= amount; ++i) {
 排序后进行穿插，穿插的时候从后向前，可以避免`[4,5,5,6]`这种错误
 > 穿插位置可以是`len`和`(len-1)/2`
 
-考虑O(n)的复杂度，使用快排思路找到中位数，然后构造答案
+考虑O(n)的复杂度，使E用快排思路找到中位数，然后构造答案
+# 326. Power of Three
+循环可以解决
+
+不用循环考虑2的幂次是第一位为`1`，所以对`3`来说，可以转换为`3`进制后判断第一位为`1`且其余为`0`（不含`2`），转换之后也可以用正则匹配
+``` java
+Integer.toString(n, 3);
+```
+
+`3`的幂次的质因子只有`3`，所以还可以用`int`的最大`3`次幂来对`n`求余
+``` java
+1162261467 % n == 0;
+```
